// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundled function generates source code for a lambda construct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for Hello
 */
export interface HelloProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes hello.
 */
export class Hello extends lambda.Function {
  constructor(scope: Construct, id: string, props?: HelloProps) {
    super(scope, id, {
      description: 'hello.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, 'hello.bundle')),
    });
  }
}"
`;

exports[`constructFile and constructName can be used to customize the generated construct 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from '@aws-cdk/core';

/**
 * Props for MyConstruct
 */
export interface MyConstructProps extends lambda.FunctionOptions {
}

/**
 * An AWS Lambda function which executes hello.
 */
export class MyConstruct extends lambda.Function {
  constructor(scope: Construct, id: string, props?: MyConstructProps) {
    super(scope, id, {
      description: 'hello.lambda.ts',
      ...props,
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, 'hello.bundle')),
    });
  }
}"
`;
